--- a/STAR_Week_2.ipynb
+++ b/STAR_Week_2.ipynb
@@ -68,7 +68,7 @@
     "## Images for the week\n",
     "### J1135-0226:\n",
     "\n",
-    "![](SDSSJ1135-0226.png)\n",
+    "![](Images/SDSSJ1135-0226.png)\n",
     "\n",
     "Threshold = 18uJy\n",
     "\n",
@@ -81,7 +81,7 @@
    "source": [
     "## J1058+0152:\n",
     "\n",
-    "![](SDSS1058+0152-DirtyAndDistorted.png)\n",
+    "![](Images/SDSS1058+0152-DirtyAndDistorted.png)\n",
     "\n",
     "\n",
     "## J1135+0014:\n",
