--- a/WeeklyReports/STAR_Week_1.ipynb
+++ b/WeeklyReports/STAR_Week_1.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ0146-0915.png)"
+    "![](../Images/SDSSJ0146-0915.png)"
    ]
   },
   {
