--- a/WeeklyReports/STAR_Week_1.ipynb
+++ b/WeeklyReports/STAR_Week_1.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSS0157-0938.png)"
+    "![](../Images/SDSS0157-0938.png)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ1048+0032.png)"
+    "![](../Images/SDSSJ1048+0032.png)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ1509+0759.png)"
+    "![](../Images/SDSSJ1509+0759.png)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ2131+1047.png)"
+    "![](../Images/SDSSJ2131+1047.png)"
    ]
   },
   {
@@ -178,8 +178,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ2158+0027.png)\n",
-    "![](Images/SDSSJ2158+0027_zoomed.png)"
+    "![](../Images/SDSSJ2158+0027.png)\n",
+    "![](../Images/SDSSJ2158+0027_zoomed.png)"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Images/SDSSJ2346-0029.png)"
+    "![](../Images/SDSSJ2346-0029.png)"
    ]
   },
   {
