--- a/WeeklyReports/STAR_Week_1.ipynb
+++ b/WeeklyReports/STAR_Week_1.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../Images/SDSSJ1048+0032.png)"
+    "![](../Images/SDSS1048+0032.png)"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../Images/SDSSJ2158+0027.png)\n",
+    "![](../Images/SDSSJ2157+0027.png)\n",
     "![](../Images/SDSSJ2158+0027_zoomed.png)"
    ]
   },
