--- a/WeeklyReports/STAR_Week_1.ipynb
+++ b/WeeklyReports/STAR_Week_1.ipynb
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../Images/SDSSJ2158+0028.png)\n",
+    "![](../Images/SDSS2158+0027.png)\n",
     "![](../Images/SDSSJ2158+0027_zoomed.png)"
    ]
   },
