--- a/WeeklyReports/STAR_Week_2.ipynb
+++ b/WeeklyReports/STAR_Week_2.ipynb
@@ -68,7 +68,7 @@
     "## Images for the week\n",
     "### J1135-0226:\n",
     "\n",
-    "![](Images/SDSSJ1135-0226.png)\n",
+    "![](../Images/SDSSJ1135-0226.png)\n",
     "\n",
     "*flagging same as J1135-0014*\n",
     "\n",
@@ -111,7 +111,7 @@
    "source": [
     "## J1058+0152:\n",
     "\n",
-    "![](Images/SDSS1058+0152-DirtyAndDistorted.png)\n",
+    "![](../Images/SDSS1058+0152-DirtyAndDistorted.png)\n",
     "\n",
     "flagdata(vis = '18B-229.sb35832779.eb35951030.58450.52327575232.ms', spw = '>28')\n",
     "\n",
@@ -124,7 +124,7 @@
     "\n",
     "## J1135+0014:\n",
     "\n",
-    "![](Images/SDSS1135+0014-DirtyAndDistorted.png)\n",
+    "![](../Images/SDSS1135+0014-DirtyAndDistorted.png)\n",
     "\n",
     "flagdata(vis = '18B-229.sb35898197.eb35955031.58451.583387210645.ms', antenna = '3')\n",
     "\n",
