--- a/WeeklyReports/STAR_Week_3.ipynb
+++ b/WeeklyReports/STAR_Week_3.ipynb
@@ -111,8 +111,8 @@
    "metadata": {},
    "source": [
     "## J0140+1411 - detection:\n",
-    "![](Images/SDSSJ0140+1411.dirty.png)\n",
-    "![](Images/SDSSJ0140+1411.png)\n",
+    "![](../Images/SDSSJ0140+1411.dirty.png)\n",
+    "![](../Images/SDSSJ0140+1411.png)\n",
     "\n",
     "Exact Coordinates: 01 40 23.83 +14 11 51.8\n",
     "\n",
@@ -141,7 +141,7 @@
     "Rms = 8.5uJy\n",
     "\n",
     "## J1445+5245:\n",
-    "![](Images/SDSSJ1445+5245.png)\n",
+    "![](../Images/SDSSJ1445+5245.png)\n",
     "\n",
     "split(vis = '18B-229.sb35915313.eb35936559.58447.69529929398.ms', outputvis = 'SDSSJ1445+5245_split.ms', field = '2')\n",
     "\n",
@@ -154,7 +154,7 @@
     "Dirty Rms = 2uJy\n",
     "\n",
     "## J1406+2923:\n",
-    "![](Images/SDSSJ1406+2923.png)\n",
+    "![](../Images/SDSSJ1406+2923.png)\n",
     "\n",
     "flagdata(vis = '18B-229.sb35923825.eb35937006.58447.74098775463.ms', antenna = '22')\n",
     "\n",
@@ -169,7 +169,7 @@
     "Dirty rms = 6.9uJy\n",
     "\n",
     "## J1449+3110:\n",
-    "![](Images/SDSSJ1449+3110.png)\n",
+    "![](../Images/SDSSJ1449+3110.png)\n",
     "\n",
     "flagdata(vis = '18B-229.sb35926622.eb35977874.58457.5474643287.ms', antenna = '0~5', spw = '18')\n",
     "\n",
@@ -196,7 +196,7 @@
     "Dirty Rms = 7.3\n",
     "\n",
     "## J1443+3056:\n",
-    "![](Images/SDSSJ1443+3056.png)\n",
+    "![](../Images/SDSSJ1443+3056.png)\n",
     "\n",
     "split(vis = '18B-229.sb35926332.eb35964069.58452.78383637732.ms', outputvis = 'SDSSJ1443+3056_split.ms', field = '2')\n",
     "\n",
@@ -209,7 +209,7 @@
     "rms = 3.5uJy\n",
     "\n",
     "## J0013-0024:\n",
-    "![](Images/SDSSJ0013-0024.png)\n",
+    "![](../Images/SDSSJ0013-0024.png)\n",
     "\n",
     "split(vis = '18B-229.sb35978226.eb36039349.58470.10486790509.ms', outputvis = 'SDSSJ0013-0024_split.ms', field = '3')\n",
     "\n",
@@ -222,7 +222,7 @@
     "Cleaned Rms = 5.7\n",
     "\n",
     "## J1514+5446:\n",
-    "![](Images/SDSSJ1514+5446.png)\n",
+    "![](../Images/SDSSJ1514+5446.png)\n",
     "\n",
     "Fluctuations in finalampgaincal for every antenna at spw18\n",
     "\n",
@@ -242,8 +242,8 @@
     "-Rms = 2uJy\n",
     "\n",
     "## J1535+5402:\n",
-    "![](Images/SDSSJ1535+5402.png)\n",
-    "![](Images/SDSSJ1535+5402_FIRSTCutout.png)\n",
+    "![](../Images/SDSSJ1535+5402.png)\n",
+    "![](../Images/SDSSJ1535+5402_FIRSTCutout.png)\n",
     "\n",
     "Initially, I thought the group of radio sources closer to the middle was an imaging error, but it wasn't, as shown by the FIRST cutout of that area\n",
     "\n",
@@ -290,7 +290,7 @@
     "-Rms = 2.35uJy\n",
     "\n",
     "## J1546+1914  distorted, not really a clean/finished image:\n",
-    "![](Images/SDSSJ1546+1914.png)\n",
+    "![](../Images/SDSSJ1546+1914.png)\n",
     "\n",
     "Dirty RMS = 66.2 uJy - measurement affected heavily by other sources\n",
     "\n",
@@ -301,7 +301,7 @@
     "I initially set a threshold parameter in tclean, but had this same issue even as I increased the threshold, so I tried to set a low number of iterations in an attempt to clean the image without completely distorting it. I think this not working is a result of the external source being there, as most observations having this same issue I don't usually bother to try to clean because their dirty images appear much more unsalvageable than this one, and I haven't had this issue with any other observations at such a low niter value.\n",
     "\n",
     "## J1600+3027:\n",
-    "![](Images/SDSSJ1600+3027.png)\n",
+    "![](../Images/SDSSJ1600+3027.png)\n",
     "\n",
     "\n",
     "I also used the scaling tool in the CASA viewer on a few images to show some more noise in the images that needed it, so all images in the repository should show a sufficient amount of noise surrounding the radio sources.  There are a few observations that I made images for, but probably still need the compression fix applied to them -- I labeled these ones accordingly. "
