--- a/WeeklyReports/STAR_Week_3.ipynb
+++ b/WeeklyReports/STAR_Week_3.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "This is just the dirty image of this observation. I tried to clean it up a bit, specifically to try to clean out the beam shooting through the middle of the image from the radio source outside the field of view, but any attempt to clean this image resulted in a completely distorted image. Below is what the image turned into after running just 25 iterations of tclean on it:\n",
     "\n",
-    "![](Images/J1546+1914_25niter.png)\n",
+    "![](../Images/J1546+1914_25niter.png)\n",
     "\n",
     "I initially set a threshold parameter in tclean, but had this same issue even as I increased the threshold, so I tried to set a low number of iterations in an attempt to clean the image without completely distorting it. I think this not working is a result of the external source being there, as most observations having this same issue I don't usually bother to try to clean because their dirty images appear much more unsalvageable than this one, and I haven't had this issue with any other observations at such a low niter value.\n",
     "\n",
